# avito_tech_test_case

./: Makefile  pyproject.toml  setup.cfg
avito_test/: get_matrix.py
tests/: test_func.py
